--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="./asset/script.js"></script>
+    <script src="/asset/script.js"></script>
 </body>
 
 </html>
