--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Countdown</title>
-    <link rel="stylesheet" href="/asset/style.css">
+    <link rel="stylesheet" href="asset/style.css">
 </head>
 
 <body>
@@ -40,7 +40,7 @@
         </div>
     </div>
 
-    <script src="/asset/script.js"></script>
+    <script src="asset/script.js"></script>
 </body>
 
 </html>
